--- a/vanderlinde-frontend/package.json
+++ b/vanderlinde-frontend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "daisyui": "^5.0.46",
+    "lucide-react": "^0.525.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "typescript": "^5",
