--- a/vanderlinde-frontend/package.json
+++ b/vanderlinde-frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@deepgram/sdk": "^4.9.1",
     "daisyui": "^5.0.46",
     "lucide-react": "^0.525.0",
     "next": "15.3.2",
+    "openai": "^5.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
