--- a/vanderlinde-frontend/package.json
+++ b/vanderlinde-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@deepgram/sdk": "^4.9.1",
+    "@supabase/supabase-js": "^2.50.5",
     "daisyui": "^5.0.46",
     "lucide-react": "^0.525.0",
     "next": "15.3.2",
