--- a/vanderlinde-frontend/package.json
+++ b/vanderlinde-frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@deepgram/sdk": "^4.9.1",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.5",
     "daisyui": "^5.0.46",
+    "framer-motion": "^12.23.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.2",
     "openai": "^5.9.0",
